<resources>
    <string name="app_name">NoteApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Заметки</string>
    <string name="menu_share">Переслать</string>
    <string name="menu_gallery">Настройки</string>
    <string name="menu_slideshow">О Разработчике</string>
    <string name="menu_power">Выход</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Готово</string>
    <string name="enter_title">Введите текст</string>
    <string name="search">Поиск заметок</string>
    <string name="pmv">17:21</string>
    <string name="nine">30 Мая</string>
    <string name="xtx4">Введите текст</string>
    <string name="propu3">Пропустить</string>
    <string name="funcsions">Очень удобный функционал</string>
    <string name="kachestvo">Быстрый, качественный продукт</string>
    <string name="kucha">Куча функций и интересных фишек</string>
    <string name="go_towork">Начать работу</string>
    <string name="date">05.05.21 12:45</string>

</resources>